finished basic fucntion of BLE connection and Emergency Contacts setting

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,18 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+
+    // add for kotlin duplicated problem, when use flutter_ractive_ble
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    // add for kotlin duplicated problem, when use flutter_ractive_ble
+    configurations.all {
+        resolutionStrategy {
+            force "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+            force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+        }
+    }
 }
 
 flutter {
