--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_spinkit: ^5.1.0 # Animation
+  permission_handler: ^10.2.0
+  flutter_reactive_ble: ^5.0.2 # multiple BLE
+  flutter_blue_plus: ^1.32.10
+  http: ^1.2.2 # http request
+  flash: ^3.1.1
+  flutter_secure_storage: ^5.0.2
+  sqflite: ^2.3.2
+  path_provider: ^2.0.11
+  path: ^1.9.0
+  crypto: ^3.0.1
+  rxdart: ^0.28.0
+  agora_rtc_engine: ^6.3.2
+  flutter_background: ^1.2.0
+  geolocator: ^13.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,9 +74,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
