--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.1.0 # Animation
-  permission_handler: ^10.2.0
+  permission_handler: ^11.3.1
   flutter_reactive_ble: ^5.0.2 # multiple BLE
   flutter_blue_plus: ^1.32.10
   http: ^1.2.2 # http request
   flash: ^3.1.1
-  flutter_secure_storage: ^5.0.2
-  sqflite: ^2.3.2
+  flutter_secure_storage: ^9.2.2
+  shared_preferences: ^2.3.0
+  sqflite: ^2.3.2 # devices
   path_provider: ^2.0.11
   path: ^1.9.0
   crypto: ^3.0.1
@@ -45,6 +46,7 @@ dependencies:
   agora_rtc_engine: ^6.3.2
   flutter_background: ^1.2.0
   geolocator: ^13.0.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
