--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   agora_rtc_engine: ^6.3.2
   flutter_background: ^1.2.0
   geolocator: ^13.0.1
+  image_picker: ^1.1.2
+  image_cropper: ^8.0.1
 
 
 
