--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image_picker: ^1.1.2
   image_cropper: ^8.0.1
   uuid: ^4.4.2
+  pin_code_fields: ^8.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
