--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_spinkit: ^5.1.0 # Animation
   permission_handler: ^11.3.1
   flutter_reactive_ble: ^5.0.2 # multiple BLE
-  flutter_blue_plus: ^1.32.10
+  flutter_blue_classic: ^0.0.3
   http: ^1.2.2 # http request
   flash: ^3.1.1
   flutter_secure_storage: ^9.2.2
