* internationalization replaced some hardcoded Chinese text * Background service permissions need careful handling * Fixed UserRegisterScreen status bar coverage - Modified `home_screen.dart` to use useSafeArea: true in the modal bottom sheet * Prevented status bar dimming - Added backgroundColor: Colors.transparent and barrierColor: Colors.transparent to keep the status bar bright and visible * Maintained proper layout - The UserRegisterScreen now respects system UI boundaries while preserving its full-screen appearance

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_spinkit: ^5.1.0 # Animation
   permission_handler: ^11.3.1
   flutter_reactive_ble: ^5.0.2 # multiple BLE
