--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# iOS build artifacts
+ios/Podfile.lock
+ios/.symlinks/
+
+# Android build artifacts
+android/app/.cxx/
