feat(iOS): add microphone usage description for intercom
Add localized descriptions for microphone usage permission in English and Chinese
Add microphone usage key to Info.plist
Update project file to include localized strings

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app uses the microphone for intercom communication between cycling group members to ensure safety during rides.</string>
 </dict>
 </plist>
