--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   agora_rtc_engine: ^6.3.2
   flutter_background: ^1.2.0
   geolocator: ^13.0.1
+  package_info_plus: ^4.2.0
   image_picker: ^1.1.2
   image_cropper: ^8.0.1
   uuid: ^4.4.2
