feat: add error handling and safe mode for app startup
Implement runZonedGuarded to catch all uncaught exceptions during app startup
Add safe mode UI that appears when startup fails
Include additional iOS build artifacts in gitignore
Add comments to user profile screen sections

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,16 @@ app.*.map.json
 # iOS build artifacts
 ios/Podfile.lock
 ios/.symlinks/
+ios/build/
+ios/DerivedData/
+**/ios/Flutter/App.framework
+**/ios/Flutter/Flutter.framework
+**/ios/Flutter/Generated.xcconfig
+**/ios/Flutter/ephemeral
+**/ios/Flutter/flutter_assets/
+ios/Runner.xcworkspace/xcuserdata/
+ios/Runner.xcodeproj/xcuserdata/
+ios/build/ios/XCBuildData/
 
 # Android build artifacts
 android/app/.cxx/
