feat(login): implement password login using CommonApi
refactor(config): move bluetooth config to assets/config directory

style: format code in user_login_screen.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,7 +87,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
-    - assets/configs/
+    - assets/config/
     - TermsofService.md
     - TermsofService-zh.md
     - PrivacyPolicy.md
